update styling to prevent layout from shifting too much on load

--- a/nonogram-app/src/components/GameDaily.css
+++ b/nonogram-app/src/components/GameDaily.css
@@ -1,3 +1,6 @@
 .game-container {
   width: 500px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
